# sts-plan-technology-for-your-school

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .releaserc.json  Dfe.PlanTech.DatabaseUpgrader.sln  PageEntityTypeConfiguration.cs  README.md  dotnet test plan-technology-for-your-sch.yml  eslint.config.mjs  global.json  jest.config.js  oh-no-thoughts.md  package-lock.json  package.json  plan-technology-for-your-school.sln  sonar-project.properties  tech-debt-backlog.md
.github/: README.md  dependabot.yml  pr-check-areas.yml  pr-check-manifest.json  pull_request_template.md
DfE.PlanTechnologyForYourSchool.UnitTest/: DfE.PlanTechnologyForYourSchool.UnitTest.csproj  DfE.PlanTechnologyForYourSchool.UnitTest.sln  UnitTest1.cs
DfE.PlanTechnologyForYourSchool.WebApp/: DfE.PlanTechnologyForYourSchool.WebApp.csproj  Dockerfile  Program.cs
Dfe.PlanTech.Cache/: Dfe.PlanTech.Cache.csproj
adr/: 0001-web-framework.md  0002-application-framework.md  0003-build-test-deploy-environment.md  0004-hosting-platform.md  0005-source-repository.md  0006-deployment-tooling.md  0007-infrastructure-as-code.md  0008-database-management-system.md  0009-container-registry.md  0010-secrets-management.md  0011-content-management.md  0012-authentication-provider.md  README.md
bruno/: .env.example  README.md  bruno.json  collection.bru
coding-style/: FORMATTING.md  README.md  TOOLING.md
contentful/: README.md  contentTypes.json.minimal.json  jest.config.js  package-lock.json  package.json
docs/: Authentication.md  Contentful-Caching-Process.md  Contentful-Integration.md  Conventions.md  DbUp.md  GitHub-Workflows.md  README.md  Routers.md  Terraform.md
linting/: README.md
migration-scripts/: .gitignore  README.md  config.example.json  contentful-migration.py  reconcilliation.sql  (+3 more)
qa-visualiser/: .env.example  README.md  main.py  pyproject.toml
qa-visualiser/src/: fetch_sections.py  generate_visualisations.py  models.py
qa-visualiser/tests/: conftest.py  test_fetch_sections.py  test_generate_visualisations.py
utils/update-gias-data/: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
utils/update-gias-data/src/: classes.py  constants.py  extract_data.py  fetch_data.py  update_database.py  utils.py  validation.py
(+4384 files in other folders)
