[project]
name = "update-gias-data"
version = "0.1.0"
description = "Refreshes the GIAS data in the plan-tech database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.3",
    "pandas>=3.0.3",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tqdm>=4.66.1",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.4",
]
